<resources>
    <string name="app_name">DicomMobile</string>
    <string name="title_activity_about_dicom">O Dicom</string>
    <string name="title_activity_language">Język</string>
    <string name="title_activity_about_application">O Aplikacji</string>
    <string name="title_activity_settings">Ustawienia</string>
    <string name="title_activity_open_file">Otwórz plik</string>
    <string name="title_activity_connect_to_server">Połącz z serwerem</string>
    <string name="title_activity_open_file_locally">Otwórz plik lokalnie</string>
    <string name="title_activity_open_file_remotely">Otwórz plik zdalnie</string>
    <string name="title_activity_history">Historia</string>
    <string name="title_activity_file_window">Okno pliku</string>
    <string name="title_activity_metadata">Metadata</string>
    <string name="title_activity_about_file">AboutFile</string>
    <string name="title_activity_full_metadata">FullMetadata</string>
    <string name="title_activity_rendering">Rendering</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_connectToServer">Połącz z serwerem</string>
    <string name="action_opsenFile">Otwórz plik</string>
    <string name="action_aboutDicom">O Dicom</string>
    <string name="action_aboutApp">O Aplikacji</string>
    <string name="action_language">Język</string>
    <string name="action_settings">Ustawienia</string>
    <string name="action_quit">Wyjdź</string>
    <string name="action_metaData">Metadane</string>
    <string name="action_aboutFile">O pliku</string>
    <string name="action_fullMetaData">Pełne metadane</string>
    <string name="action_render">Rendering</string>
    <string name="button_back">Powrót</string>
    <string name="button_polish">Polski</string>
    <string name="button_english">Angielski</string>
    <string name="button_german">Niemiecki</string>
    <string name="button_openRemotely">Otwórz zdalnie</string>
    <string name="button_openLocally">Otwórz lokalnie</string>
    <string name="button_history">Historia</string>
    <string name="button_open">Otwórz</string>
    <string name="button_cancel">Anuluj</string>
    <string name="button_connect">Połącz</string>
    <string name="button_clear">Wyczyść</string>
    <string name="textView_ipAddress">Adres ip:</string>
    <string name="textView_portNumber">Numer portu:</string>
    <string name="hint_ipAddress">192.168.255.1</string>
    <string name="hint_portNumber">8888</string>
    <string name="incorrectData">Niepoprawne dane!</string>
    <string name="text_aboutApp">Tutaj tekst na temat applikacji </string>
</resources>