<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="pl.kobak.rafal.dicommobile.ConnectToServer"
                android:gravity="center">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_connect"
        android:id="@+id/button_connect"
        android:onClick="onClick_connect"
        style="@style/buttonStyle"
        android:background="@drawable/button"
        android:layout_below="@+id/portNumberEditText"
        android:layout_toLeftOf="@+id/button_clear"
        android:layout_toStartOf="@+id/button_clear"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_clear"
        android:id="@+id/button_clear"
        android:onClick="onClick_clear"
        style="@style/buttonStyle"
        android:background="@drawable/button"
        android:layout_below="@+id/portNumberEditText"
        android:layout_alignRight="@+id/portNumberEditText"
        android:layout_alignEnd="@+id/portNumberEditText"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hint_ipAddress"
        android:id="@+id/ipAddressTextEdit"
        android:layout_alignTop="@+id/ipAddressTextView"
        android:layout_toRightOf="@+id/ipAddressTextView"
        android:layout_toEndOf="@+id/ipAddressTextView"/>

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/textView_ipAddress"
        android:id="@+id/ipAddressTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="102dp"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/hint_portNumber"
        android:id="@+id/portNumberEditText"
        android:layout_below="@+id/ipAddressTextEdit"
        android:layout_toRightOf="@+id/portNumberTextView"
        android:layout_toEndOf="@+id/portNumberTextView"/>

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/textView_portNumber"
        android:id="@+id/portNumberTextView"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/ipAddressTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_welcomeMessage"
        android:id="@+id/welcomeMessageTextView"
        android:layout_above="@+id/ipAddressTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"/>

</RelativeLayout>