<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="pl.kobak.rafal.dicommobile.Language">

    <Button
        android:layout_width="@dimen/buttonLanguage_width"
        android:layout_height="@dimen/buttonLanguage_height"
        android:text="@string/button_polish"
        android:id="@+id/button_polish"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClick_polish"/>

    <Button
        android:layout_width="@dimen/buttonLanguage_width"
        android:layout_height="@dimen/buttonLanguage_height"
        android:text="@string/button_english"
        android:id="@+id/button_english"
        android:layout_above="@+id/button_polish"
        android:layout_centerHorizontal="true"
        android:onClick="onClick_english"/>

    <Button
        android:layout_width="@dimen/buttonLanguage_width"
        android:layout_height="@dimen/buttonLanguage_height"
        android:text="@string/button_german"
        android:id="@+id/button_german"
        android:layout_below="@+id/button_polish"
        android:layout_centerHorizontal="true"
        android:onClick="onClick_german"/>

</RelativeLayout>
